--- a/app.json
+++ b/app.json
@@ -26,6 +26,9 @@
     ],
     "ios": {
       "supportsTablet": true
+    },
+    "androidStatusBar": {
+      "backgroundColor": "#fa5e46"
     }
   }
 }
